# QtParserMTG

./: .gitignore  ParsCard.py  ParsCardMTG.nsi  ParseCard.py  ParseCard.spec  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
src/: cards.py  eventor.py
src/dataBase/: cards.db  data_base.py
src/database/: cards.db  database.py
src/excel/: excel.py
src/initiation/: data.config  initiation.py
src/pars/: pars.py
src/parse/: parse.py
src/table/: tables.py
test/test_parse/: test_parse.py
ui/: ui_imagedialog.py  untitled.ui
