[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Maxac <maxac153@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt5 = ">=5.15.9,<5.16.0"
pandas = ">=1.5.3,<1.6.0"
requests = ">=2.25.1,<2.26.0"
beautifulsoup4 = ">=4.11.2,<4.12.0"
pytest = ">=7.2.2,<7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
